# lab5-hint

./: .gitignore  ArthimiticExpressions.txt  README.md  hint.py  pyproject.toml
Lab5/: pom.xml
Lab5/src/main/java/edu/sou/cs452/Lab5/: AbstractInterpreter.java  AbstractLattice.java  AbstractValue.java  App.java  Expr.java  Interpreter.java  LiteralBoolean.java  LiteralNull.java  LiteralNumber.java  LiteralString.java  LiteralValue.java  Lox.java  LoxIdentifer.java  Parser.java  RuntimeError.java  SExpr.java  SExprParser.java  Scanner.java  Token.java  TokenType.java
Lab5/src/test/java/edu/sou/cs452/Lab5/: AppTest.java
pyarmor_runtime_005075/: __init__.py
